syntax = "proto3";
// Automatically generated by goyang https://github.com/openconfig/goyang
// compiled 2018-04-20T09:25:54Z
// do not delete the next line
// goyang-version 1
// module "turing-machine"
// revision "2013-12-27"
// namespace "http://example.net/turing-machine"

// Data model for the Turing Machine.
package turing_machine;
service TuringMachine {
  rpc Initialize (InitializeRequest) returns (Empty);
}
message InitializeRequest {
  // The string with which the tape shall be initialized. The
  // leftmost symbol will be at tape coordinateÂ 0.
  string tape_content = 1;
}

message Empty { }

// The Turing Machine has halted. This means that there is no
// transition rule for the current state and tape symbol.
message Halted {
  // The state of the control unit in which the machine has
  // halted.
  uint32 state = 1;
}

// Start the Turing Machine operation.
message Run {
}

// State data and configuration of a Turing Machine.
message TuringMachine {
  // Position of tape read/write head.
  int64 head_position = 1;
  // Current state of the control unit.
  // 
  // The initial state is 0.
  uint32 state = 2;
  // The contents of the tape.
  // The contents of the tape.
  message Tape {
    // List of non-blank cells.
    // List of non-blank cells.
    message Cell {
      // Coordinate (index) of the tape cell.
      int64 coord = 1;
      // Symbol appearing in the tape cell.
      // 
      // Blank (empty string) is not allowed here because the
      // 'cell' list only contains non-blank cells.
      string symbol = 2;
    }
    repeated Cell cell = 1;
  }
  Tape tape = 3;
  // The Turing Machine is configured by specifying the
  // transition function.
  // The Turing Machine is configured by specifying the
  // transition function.
  message TransitionFunction {
    // The list of transition rules.
    // The list of transition rules.
    message Delta {
      // Input parameters (arguments) of the transition rule.
      // Input parameters (arguments) of the transition rule.
      message Input {
        // Current state of the control unit.
        uint32 state = 1;
        // Symbol read from the tape cell.
        string symbol = 2;
      }
      Input input = 1;
      // An arbitrary label of the transition rule.
      string label = 2;
      // Output values of the transition rule.
      // Output values of the transition rule.
      message Output {
        // Move the head one cell to the left or right
        enum HeadMove {
          HeadMove_LEFT = 0;
          HeadMove_RIGHT = 1;
        };
        HeadMove head_move = 1;
        // New state of the control unit. If this leaf is not
        // present, the state doesn't change.
        uint32 state = 2;
        // Symbol to be written to the tape cell. If this leaf is
        // not present, the symbol doesn't change.
        string symbol = 3;
      }
      Output output = 3;
    }
    repeated Delta delta = 1;
  }
  TransitionFunction transition_function = 4;
}

// Do not delete the lines below, they preserve tag information for goyang.
// goyang-tag Halted state/uint32 1
// goyang-tag Initialize_InitializeRequest tape_content/string 1
// goyang-tag TuringMachine head_position/int64 1
// goyang-tag TuringMachine state/uint32 2
// goyang-tag TuringMachine tape/Tape 3
// goyang-tag TuringMachine transition_function/TransitionFunction 4
// goyang-tag TuringMachine_Tape cell/Cell[] 1
// goyang-tag TuringMachine_Tape_Cell coord/int64 1
// goyang-tag TuringMachine_Tape_Cell symbol/string 2
// goyang-tag TuringMachine_TransitionFunction delta/Delta[] 1
// goyang-tag TuringMachine_TransitionFunction_Delta input/Input 1
// goyang-tag TuringMachine_TransitionFunction_Delta label/string 2
// goyang-tag TuringMachine_TransitionFunction_Delta output/Output 3
// goyang-tag TuringMachine_TransitionFunction_Delta_Input state/uint32 1
// goyang-tag TuringMachine_TransitionFunction_Delta_Input symbol/string 2
// goyang-tag TuringMachine_TransitionFunction_Delta_Output head_move/HeadMove 1
// goyang-tag TuringMachine_TransitionFunction_Delta_Output state/uint32 2
// goyang-tag TuringMachine_TransitionFunction_Delta_Output symbol/string 3
